chromeos: wires transients using the WindowTreeHost window

The expectation is transients are honored at the widget level, which
corresponds to wiring using the window created by the WindowTreeHost.

BUG=685226
TEST=covered by test.
R=erg@chromium.org

Review-Url: https://codereview.chromium.org/2649103009
Cr-Commit-Position: refs/heads/master@{#446151}

Former-commit-id: 55cd9ef40d390ea5a39089d4b18ea8fe78de5eb8